tests/snapshots/cli_help__cli_help_cache.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Inspect local cache state

Usage: spotuify cache <COMMAND>

Commands:
  status  Show local cache row counts and freshness
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
