tests/snapshots/cli_help__cli_help_cache_status.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Show local cache row counts and freshness

Usage: spotuify cache status [OPTIONS]

Options:
      --format <FORMAT>  Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
