tests/snapshots/cli_help__cli_help_config.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Read or write ~/.config/spotuify/spotuify.toml

Usage: spotuify config <COMMAND>

Commands:
  path  Print the config path
  init  Create the config file if it does not exist
  get   Print a config value
  set   Set a config value
  help  Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
