tests/snapshots/cli_help__cli_help_config_get.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print a config value

Usage: spotuify config get <KEY>

Arguments:
  <KEY>

Options:
  -h, --help  Print help
