tests/snapshots/cli_help__cli_help_config_path.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print the config path

Usage: spotuify config path

Options:
  -h, --help  Print help
