tests/snapshots/cli_help__cli_help_config_set.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Set a config value

Usage: spotuify config set <KEY> <VALUE>

Arguments:
  <KEY>
  <VALUE>

Options:
  -h, --help  Print help
