tests/snapshots/cli_help__cli_help_config_show.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Print every config key + value (the whole editable config). Drives the macOS Settings window's visual config editor

Usage: spotuify config show [OPTIONS]

Options:
      --log-format <LOG_FORMAT>  Phase 13 (P13-A) — pick the daemon log format for this run. Also honoured via `SPOTUIFY_LOG_FORMAT` [possible values: text, json]
      --raw                      Read only persisted file values, without defaults or overrides
      --no-daemon-start          Phase 13 (P13-H) — if set, the CLI never auto-starts the daemon. Errors with a clear hint when the daemon socket is missing
      --reveal-secret            Print sensitive values instead of `<redacted>`
      --format <FORMAT>          Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -o, --set <key.path=value>     Phase 13 (P13-H) — one-shot TOML override (e.g. `-o player.bitrate=160`). Repeatable. Applies for this invocation only; the config file on disk is unchanged
  -h, --help                     Print help
