tests/snapshots/cli_help__cli_help_daemon_start.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Start the daemon

Usage: spotuify daemon start [OPTIONS]

Options:
      --foreground  Run in the foreground for debugging or launchd/systemd
  -h, --help        Print help
