tests/snapshots/cli_help__cli_help_daemon_status.snap
---
source: tests/cli_help.rs
expression: normalize_help_output(&stdout)
---
Show daemon socket and lifecycle status

Usage: spotuify daemon status [OPTIONS]

Options:
      --format <FORMAT>  Output format [default: table] [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
